--- a/MLcourse/support-vector-machines.html
+++ b/MLcourse/support-vector-machines.html
@@ -33,8 +33,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
+<link rel="prev" href="pw-4.html">
 
-<link rel="next" href="introduction.html">
 
 <script src="book_assets/jquery-2.2.3/jquery.min.js"></script>
 <link href="book_assets/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -195,6 +195,14 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="" data-path="pw-4.html"><a href="pw-4.html#quadratic-discriminant-analysis-qda-1"><i class="fa fa-check"></i>Quadratic Discriminant Analysis (QDA)</a></li>
 <li class="chapter" data-level="" data-path="pw-4.html"><a href="pw-4.html#comparison"><i class="fa fa-check"></i>Comparison</a></li>
 </ul></li>
+<li class="chapter" data-level="5" data-path="support-vector-machines.html"><a href="support-vector-machines.html"><i class="fa fa-check"></i><b>5</b> Support Vector Machines</a><ul>
+<li class="chapter" data-level="5.1" data-path="support-vector-machines.html"><a href="support-vector-machines.html#maximal-margin-classifier"><i class="fa fa-check"></i><b>5.1</b> Maximal Margin Classifier</a></li>
+<li class="chapter" data-level="5.2" data-path="support-vector-machines.html"><a href="support-vector-machines.html#support-vector-classifier"><i class="fa fa-check"></i><b>5.2</b> Support Vector Classifier</a></li>
+<li class="chapter" data-level="5.3" data-path="support-vector-machines.html"><a href="support-vector-machines.html#kernels-and-support-vector-machines"><i class="fa fa-check"></i><b>5.3</b>  Kernels and Support Vector Machines</a></li>
+<li class="chapter" data-level="5.4" data-path="support-vector-machines.html"><a href="support-vector-machines.html#example-and-comparison-with-logistic-regression"><i class="fa fa-check"></i><b>5.4</b> Example and Comparison with Logistic Regression</a></li>
+<li class="chapter" data-level="5.5" data-path="support-vector-machines.html"><a href="support-vector-machines.html#lab-support-vector-machine-for-classification"><i class="fa fa-check"></i><b>5.5</b> Lab: Support Vector Machine for Classification</a></li>
+<li class="chapter" data-level="5.6" data-path="support-vector-machines.html"><a href="support-vector-machines.html#lab-nonlinear-support-vector-machine"><i class="fa fa-check"></i><b>5.6</b> Lab: Nonlinear Support Vector Machine</a></li>
+</ul></li>
 </ul>
 
       </nav>
@@ -212,25 +220,55 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="header">
-<h1 class="title">Machine Learning</h1>
-<h4 class="author"><em>Mohamad Ghassany</em></h4>
-<h4 class="date"><em>2017-01-30</em></h4>
+<div id="support-vector-machines" class="section level1">
+<h1><span class="header-section-number">5</span> Support Vector Machines</h1>
+<div id="maximal-margin-classifier" class="section level2">
+<h2><span class="header-section-number">5.1</span> Maximal Margin Classifier</h2>
+<iframe width="560" height="349" src="https://www.youtube.com/embed/QpbynqiTCsY" frameborder="0" allowfullscreen>
+</iframe>
 </div>
-<div id="welcome" class="section level1 unnumbered">
-<h1>Welcome</h1>
-<!-- # Introduction -->
-<p>Welcome to this course. It is only a little introduction to Machine Learning.</p>
-<p>The aim of Machine Learning is to build computer systems that can adapt to their environments and learn form experience. Learning techniques and methods from this field are successfully applied to a variety of learning tasks in a broad range of areas, including, for example, spam recognition, text classification, gene discovery, financial forecasting. The course will give an overview of many concepts, techniques, and algorithms in machine learning, beginning with topics such as linear regression and classification and ending up with topics such as kmeans and Expectation Maximization. The course will give the student the basic ideas and intuition behind these methods, as well as a more formal statistical and computational understanding. Students will have an opportunity to experiment with machine learning techniques in R and apply them to a selected problem.</p>
+<div id="support-vector-classifier" class="section level2">
+<h2><span class="header-section-number">5.2</span> Support Vector Classifier</h2>
+<iframe width="560" height="349" src="https://www.youtube.com/embed/xKsTsGE7KpI" frameborder="0" allowfullscreen>
+</iframe>
+</div>
+<div id="kernels-and-support-vector-machines" class="section level2">
+<h2><span class="header-section-number">5.3</span>  Kernels and Support Vector Machines</h2>
+<iframe width="560" height="349" src="https://www.youtube.com/embed/dm32QvCW7wE" frameborder="0" allowfullscreen>
+</iframe>
+</div>
+<div id="example-and-comparison-with-logistic-regression" class="section level2">
+<h2><span class="header-section-number">5.4</span> Example and Comparison with Logistic Regression</h2>
+<iframe width="560" height="349" src="https://www.youtube.com/embed/mI18GD4_ysE" frameborder="0" allowfullscreen>
+</iframe>
+</div>
+<div id="lab-support-vector-machine-for-classification" class="section level2">
+<h2><span class="header-section-number">5.5</span> Lab: Support Vector Machine for Classification</h2>
+<iframe width="560" height="349" src="https://www.youtube.com/embed/qhyyufR0930" frameborder="0" allowfullscreen>
+</iframe>
+</div>
+<div id="lab-nonlinear-support-vector-machine" class="section level2">
+<h2><span class="header-section-number">5.6</span> Lab: Nonlinear Support Vector Machine</h2>
+<iframe width="560" height="349" src="https://www.youtube.com/embed/L3n2VF7yKkk" frameborder="0" allowfullscreen>
+</iframe>
 
 </div>
+</div>
+
+
+
+
+
+
+
+
             </section>
 
           </div>
         </div>
       </div>
+<a href="pw-4.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 
-<a href="introduction.html" class="navigation navigation-next navigation-unique" aria-label="Next page""><i class="fa fa-angle-right"></i></a>
 
 <script src="book_assets/gitbook-2.6.7/js/app.min.js"></script>
 <script src="book_assets/gitbook-2.6.7/js/lunr.js"></script>
